--- a/schedule.html
+++ b/schedule.html
@@ -1,9 +1,38 @@
-<html>
+
+<!DOCTYPE html>
+
+<html lang="en">
   <head>
-    <title>thlorenz stream schedule</title> 
+    <meta charset="utf-8" />
+
+    <title>thlorenz stream schedule</title>
+    <meta name="author" content="Thorsten Lorenz" />
+
+    <link rel="stylesheet" href="css/index.css" />
+    <title>thlorenz stream schedule</title>
   </head>
+
   <body>
     <h1>thlorenz stream schedule</h1>
+<div class="center">
+    <a href="https://www.twitch.tv/thlorenz">Follow on Twitch</a>
+    <h2>Flutter</h2<br>
+    <h3>Birdz </h3<br>
+    <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
+    <br><p class="schedule">Sat 19:30-21:00</p>
+    <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
+    <br><p class="schedule">Mon 18:30-20:00</p>
+    <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
+    <br><p class="schedule">Tue 18:30-20:00</p>
+    <h3>Multiplayer Game</h3<br>
+    <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
+    <br><p class="schedule">Sun 16:00-17:45</p>
+    <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
+    <br><p class="schedule">Sun 19:00-20:00</p>
+    <h2>Twitch Hacks</h2<br>
+    <h4>Generating Schedule HTML Page from Org Mode</h4<br>
+    <br><p class="schedule">Sat 19:30-21:00</p>
+
+</div>
   </body>
 </html>
-
