--- a/schedule.html
+++ b/schedule.html
@@ -30,8 +30,8 @@
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 19:00-20:00</p>
     <h2>Twitch Hacks</h2<br>
-    <h4>HOLD Generating Schedule HTML Page from Org Mode</h4<br>
-    <br><p class="schedule">Sat 19:30-21:00</p>
+    <h4>Generating Schedule HTML Page from Org Mode</h4<br>
+    <br><p class="schedule">Tue 18:30-20:00</p>
 
 </div>
   </body>
