--- a/schedule.html
+++ b/schedule.html
@@ -22,15 +22,15 @@
     <br><p class="schedule">Sat 19:30-21:00</p>
     <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Mon 18:30-20:00</p>
-    <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
-    <br><p class="schedule">Tue 18:30-20:00</p>
+    <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
+    <br><p class="schedule">Tue 18:30-20:15</p>
     <h3>Multiplayer Game</h3<br>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 15:00-16:45</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 18:30-20:45</p>
     <h2>Twitch Hacks</h2<br>
-    <h4>Generating Schedule HTML Page from Org Mode</h4<br>
+    <h4>HOLD Generating Schedule HTML Page from Org Mode</h4<br>
     <br><p class="schedule">Tue 18:30-20:00</p>
 
 </div>
