schedule: regenerated html schedule

--- a/schedule.html
+++ b/schedule.html
@@ -16,6 +16,7 @@
     <h1>thlorenz stream schedule</h1>
 <div class="center">
     <a href="https://www.twitch.tv/thlorenz">Follow on Twitch</a>
+    <span> Times are shown in Mountain Time which is 2 hours behind EST.</span>
     <h2>Flutter</h2<br>
     <h3>Birdz </h3<br>
     <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
@@ -24,7 +25,13 @@
     <br><p class="schedule">Mon 18:30-20:00</p>
     <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Tue 18:30-20:15</p>
+    <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
+    <br><p class="schedule">Fri 18:30-20:15</p>
     <h3>Multiplayer Game</h3<br>
+    <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
+    <br><p class="schedule">Thu 18:30-20:15</p>
+    <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
+    <br><p class="schedule">Fri 18:30-20:15</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 15:00-16:45</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
