schedule: regenerated html schedule

--- a/schedule.html
+++ b/schedule.html
@@ -27,6 +27,8 @@
     <br><p class="schedule">Tue 18:30-20:15</p>
     <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Fri 18:30-20:15</p>
+    <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
+    <br><p class="schedule">Sat 18:30-20:15</p>
     <h3>Multiplayer Game</h3<br>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Wed 18:30-20:15</p>
