--- a/schedule.html
+++ b/schedule.html
@@ -25,8 +25,6 @@
     <br><p class="schedule">Mon 18:30-20:00</p>
     <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Tue 18:30-20:15</p>
-    <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
-    <br><p class="schedule">Fri 18:30-20:15</p>
     <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Sat 18:30-20:15</p>
     <h3>Multiplayer Game</h3<br>
@@ -34,6 +32,8 @@
     <br><p class="schedule">Wed 18:30-20:15</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Thu 18:30-20:15</p>
+    <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
+    <br><p class="schedule">Fri 18:30-20:15</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 15:00-16:45</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
