--- a/schedule.html
+++ b/schedule.html
@@ -39,7 +39,7 @@
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 18:30-20:45</p>
     <h2>Twitch Hacks</h2<br>
-    <h4>Generating Schedule HTML Page from Org Mode</h4<br>
+    <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
     <br><p class="schedule">Sat 18:30-20:15</p>
 
 </div>
