--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,10 @@
     <h2>Twitch Hacks</h2<br>
     <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
     <br><p class="schedule">Sat 18:30-20:15</p>
+    <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
+    <br><p class="schedule">Sun 16:00-18:45</p>
+    <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
+    <br><p class="schedule">Sun 18:30-20:15</p>
 
 </div>
   </body>
