schedule: regenerated html schedule

--- a/schedule.html
+++ b/schedule.html
@@ -36,10 +36,10 @@
     <br><p class="schedule">Fri 18:30-20:15</p>
     <h4>HOLD Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Sun 18:30-20:45</p>
-    <h2>Twitch Hacks</h2<br>
-    <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
+    <h2>Emacs / Elisp / Twitch Hacks</h2<br>
+    <h4>Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  </h4<br>
     <br><p class="schedule">Sat 18:30-20:15</p>
-    <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
+    <h4>Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  </h4<br>
     <br><p class="schedule">Sun 16:00-18:45</p>
     <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
     <br><p class="schedule">Sun 18:30-20:15</p>
