--- a/schedule.html
+++ b/schedule.html
@@ -19,14 +19,10 @@
     <span> Times are shown in Mountain Time which is 2 hours behind EST.</span>
     <h2>Flutter</h2<br>
     <h3>Birdz </h3<br>
-    <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
-    <br><p class="schedule">Sat 19:30-21:00</p>
     <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Mon 18:30-20:00</p>
     <h4>Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
     <br><p class="schedule">Tue 18:30-20:15</p>
-    <h4>HOLD Building Bird Quiz with a Tinder like interface using Flutter</h4<br>
-    <br><p class="schedule">Sat 18:30-20:15</p>
     <h3>Multiplayer Game</h3<br>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Wed 18:30-20:15</p>
@@ -34,15 +30,14 @@
     <br><p class="schedule">Thu 18:30-20:15</p>
     <h4>Building a Multiplayer 2D Game in Flutter</h4<br>
     <br><p class="schedule">Fri 18:30-20:15</p>
-    <h4>HOLD Building a Multiplayer 2D Game in Flutter</h4<br>
-    <br><p class="schedule">Sun 18:30-20:45</p>
     <h2>Emacs / Elisp / Twitch Hacks</h2<br>
     <h4>Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  </h4<br>
     <br><p class="schedule">Sat 18:30-20:15</p>
     <h4>Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  </h4<br>
-    <br><p class="schedule">Sun 16:00-18:45</p>
-    <h4>Setting Twitch Status from Emacs Org Mode</h4<br>
+    <br><p class="schedule">Sun 14:00-17:45</p>
+    <h4>Converting GoodReader PDF Annotations to Emacs Org Mode File via Elisp  </h4<br>
     <br><p class="schedule">Sun 18:30-20:15</p>
+    <h4>HOLD Setting Twitch Status from Emacs Org Mode</h4<br>
 
 </div>
   </body>
